# datalake-backend

./: README.md
datalake-client/: .history  pyproject.toml
datalake-client/datalake_client/: main.py
datalake-fusion/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.old2
datalake-fusion/src/: lib.rs  main.rs
datalake-fusion/src/utils/: aws.rs  constants.rs  mod.rs
datalake-lambda/: Cargo.toml  Dockerfile  api_schema.yaml
datalake-lambda/src/: lib.rs  main.rs
datalake-lambda/src/routes/: mod.rs  query.rs  route.rs
datalake-lambda/src/utils/: aws.rs  constants.rs  error.rs  mod.rs  pathparser.rs  pathvalidator.rs  queryparser.rs
datalake-lambda/tests/api/: constants.rs  helpers.rs  main.rs  query.rs
datalake-web-ui/: .gitignore  Cargo.toml  README.md
datalake-web-ui/src/: app.rs  lib.rs  main.rs
datalake-web-ui/src/components/: mod.rs  operation.rs  select_result.rs
datalake-web-ui/src/pages/: docs.rs  home.rs  mod.rs
datalake-web-ui/src/utils/: constraints.rs  mod.rs  tools.rs
