[package]
name = "datalake-lambda"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
aws-sdk-ecs = "1"
aws-creds = "0.37"
aws-smithy-types = "1.2"
color-eyre = "0.6"
dotenvy = "0.15.7"
http = "1"
lambda_runtime = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features= ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
thiserror = "2.0.2"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json"] }
sqlparser = "0.56"
url = "2"

[dev-dependencies]
# futures-lite = { version = "2.1.0", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rstest = "0.24"
