[package]
name = "datalake-web-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
leptos = { version = "0.8.12", features = ["csr", "nightly"] }
leptos_router = "0.8.9"
gloo-net = { version = "0.6", features = ["json", "http"] }
gloo-timers = { version = "0.3", features = ["futures"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3.77", features = ["Location", "Clipboard", "Navigator", "Window"] }
wasm-bindgen-futures = "0.4"
wasm-bindgen = "0.2"
